fix: alignment issues in search results not found

--- a/EP7 Finding Path/src/style.css
+++ b/EP7 Finding Path/src/style.css
@@ -229,9 +229,3 @@ input::placeholder{
 	flex-wrap: wrap;
 	margin: 2rem 0;
 }
-.no-data-found{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 25%;
-}
